[package]
name = "car_reader"
version = "0.1.0"
edition = "2021"

[lib]
name = "car_reader_lib"
path = "src/lib.rs"

[[bin]]
name = "car_reader"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
assert-json-diff = "2.0.2"
binrw = "0.11.0"
clap = { version = "4.1.13", features = ["derive"] }
hex = "0.4.3"
hex-literal = "0.4.1"
indexmap = "1.9.3"
memmap = "0.7.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
uuid = "1.3.0"
