[package]
name = "carutil"
version = "0.1.0"
edition = "2021"

[lib]
name = "carutil_lib"
path = "src/lib.rs"

[[bin]]
name = "carutil"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
assert-json-diff = "2.0.2"
binrw = "0.11.0"
bitfield-struct = "0.4.1"
chrono = "0.4.24"
clap = { version = "4.1.13", features = ["derive"] }
hex = "0.4.3"
lzfse_rust = "0.2.0"
memmap = "0.7.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
png = "0.17.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
